--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,4 @@
-* Wed Apr 20 2016 Sundeep Anand <suanand@redhat.com>
-- add SQLAlchemy and re-structure
-
-* Wed Apr 20 2016 Sundeep Anand <suanand@redhat.com>
+* Fri Jul 08 2016 Sundeep Anand <suanand@redhat.com>
+- project restructure: settings, requires, docs
+- add SQLAlchemy middleware
 - initial structure with django
